# PArray

./: .gitmodules  Makefile.am  README.md  configure.ac
MultiMalloc/: Makefile.am  README.md  configure.ac
MultiMalloc/ZePaSt/: .gitmodules  Makefile.am  README.md  configure.ac
MultiMalloc/ZePaSt/src/: Makefile-LIBADD.inc  libivariance.c  libmean.c  libstat.c  libstat_off_diff.c  libstats.c  libzepast.c  pstat.h  pstat_mulvar.h  pstat_ngram.h  stat.h  stat_off.h  stat_off_diff-test.c  stat_off_diff.h  sum-test.c  variance-test.c  variance.h  zepast-test.c  zepast.h
MultiMalloc/src/: Makefile-LIBADD.inc  Makefile.am  libmmalloc.c
ZePaSt/: TODO
ZePaSt/src/: Makefile.am  absdev-test.c  absdev.h  ivariance-test.c  ivariance.h  libabsdev.c  libpstat.c  libpstat_mulvar.c  libpstat_ngram.c  libpstat_off.c  libstat_off.c  libsum.c  libvariance.c  mean-test.c  mean.h  pstat_off.h  stat-common.h  stat-test.c  stats.h  sum.h
src/: Makefile-LIBADD.inc  Makefile.am  libparray.c  libparray.pc.in  libparray_config  libswap.c  mmalloc.h  parray.h  swap.h
